[package]
name = "jina-rust-proto"
version = "0.1.0"
edition = "2018"
authors = ["Jina AI Dev-Team <dev-team@jina.ai>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4"
prost-derive = "0.7"
tonic = "0.4.2"
prost = "0.7"
prost-types = "0.7.0"

[build-dependencies]
prost-build = { version = "0.4"  }
tonic-build = "0.4.2"

[workspace]
